fixed z-index of modal display and fixed text-overflow on user bio

--- a/frontend/src/components/UserInfo/userInfo.css
+++ b/frontend/src/components/UserInfo/userInfo.css
@@ -70,6 +70,10 @@
     color: var(--text-color);
 }
 
+.bio > p {
+  overflow-wrap: anywhere;
+}
+
 .content {
     /* border: 1px solid var(--secondary-color); */
     background-color: var(--background-color);
